[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/name_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Fonts/8bitoperator.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Art/UI/blue_button03_under.png" type="Texture" id=4]
[ext_resource path="res://Assets/Art/UI/blue_button03.png" type="Texture" id=5]
[ext_resource path="res://Assets/Art/UI/green_button_under.png" type="Texture" id=6]
[ext_resource path="res://Assets/Art/UI/green_button00.png" type="Texture" id=7]
[ext_resource path="res://Assets/Fonts/font_size_24.tres" type="DynamicFont" id=8]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 3 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Name" type="Label" parent="."]
margin_left = 35.0
margin_top = 12.0
margin_right = 314.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 2 )
text = "rospo mare b"
uppercase = true

[node name="Money" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -383.0
margin_bottom = 99.0
custom_fonts/font = SubResource( 1 )
text = "10000 €"

[node name="GasLevel" type="TextureProgress" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -99.0
margin_top = -261.0
margin_right = -54.0
margin_bottom = -71.0
step = 0.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )
fill_mode = 3

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = 35.0
margin_top = 60.0
margin_right = 225.0
margin_bottom = 109.0
rect_scale = Vector2( 2, 1 )
value = 100.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 7 )

[node name="GasTimer" type="Timer" parent="."]
autostart = true

[node name="GasLabel" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 1809.0
margin_top = -62.0
margin_right = 1898.0
margin_bottom = -25.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 8 )
text = "00 %"

[node name="Weather" type="Node" parent="."]

[node name="Generic" type="Label" parent="Weather"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = -77.0
margin_right = 557.0
margin_bottom = -4.0
custom_fonts/font = SubResource( 2 )
text = "API error"
uppercase = true

[node name="Wind" type="Label" parent="Weather"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = -138.0
margin_right = 219.0
margin_bottom = -107.0
custom_fonts/font = SubResource( 3 )
text = "VENTO 8 km/h"
uppercase = true

[node name="Humidity" type="Label" parent="Weather"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = -106.0
margin_right = 200.0
margin_bottom = -75.0
custom_fonts/font = SubResource( 3 )
text = "umidità 70 %"
uppercase = true

[connection signal="value_changed" from="HealthBar" to="." method="_on_HealthBar_value_changed"]
[connection signal="timeout" from="GasTimer" to="." method="_on_GasTimer_timeout"]
